Fixes spaces on mobiles

--- a/src/styles/artists.scss
+++ b/src/styles/artists.scss
@@ -1,10 +1,3 @@
-@media (max-width: 480px) {
-  .artists-row {
-    max-width: 100vw;
-    margin-top: 20px;
-  }
-}
-
 .artist-name {
   z-index: -1;
   background-color: white;
